# otus_hw_2

./: .clang-format  CMakeLists.txt  README.md  format.sh  main.cc
.github/workflows/: release.yaml
